--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "shared-file-format"]
 	path = shared-file-format
 	url = git@gitlab2.informatik.uni-wuerzburg.de:document-recognition/shared-file-format.git
+[submodule "CascadeTabNet"]
+	path = CascadeTabNet
+	url = git@github.com:marc-philipp-knechtle/CascadeTabNet.git
