ignore epoch pth file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /files
-
+epoch_36.pth
 
 # These are some examples of commonly ignored file patterns.
 # You should customize this list as applicable to your project.
